--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
 
+.card-footer-new {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  margin: 0px auto 0px auto;
+  padding: 0px 0 0 0;
+  text-align: center;
+  width: 100%;
+  height: 60px;
+}
+
 .table_company {
   padding-top: 40px;
 }
